<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014-2017 The OmniROM Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="device_title">OnePlus Settings</string>
    <string name="device_summary">Adjust OnePlus device specific settings</string>

    <!-- Display modes -->
    <string name="display_title">Display modes</string>
    <string name="display_summary">Adjust settings and preferences for display</string>
    <string name="srgb_mode_title">sRGB mode</string>
    <string name="hbm_mode_title">High brightness mode</string>
    <string name="hbm_mode_summary">Instantly enable the peak luminance of the display</string>
    <string name="auto_hbm_summary">Automatically enable the peak luminance of the display</string>
    <string name="auto_hbm_title">Automatic High brightness mode</string>
    <string name="auto_hbm_threshold_title">Automatic High brightness mode threshold (lux)</string>
    <string name="auto_hbm_threshold_summary"></string>
    <string name="dc_mode_title">DC-Dimming</string>
    <string name="dc_mode_summary">Dim backlight by adjusting DC current drawn to the display</string>
    <string name="dci_mode_title">DCI-P3 wide colour gamut mode</string>
    <string name="wide_mode_title">Wide colour mode</string>
    <string name="panel_category_title">Panel modes</string>
    <string name="panel_category_summary">Modes for panel color correction</string>
    <string name="off_mode_title">Off</string>
    <string name="tile_panel_mode">Panel modes</string>
    <string name="tile_hbm_mode">High brightness modes</string>
    <string name="tile_dc_mode">DC-Dimming</string>
    <string name="custom_doze_settings_title">Advanced doze settings</string>
    <string name="custom_doze_settings_summary">Handle sensor related wake events</string>


    <!-- Notification slider -->
    <string name="notification_slider_category_title">Alert slider</string>
    <string name="notification_slider_selection_dialog_title">Action</string>
    <string name="notification_slider_top_position">Top position</string>
    <string name="notification_slider_middle_position">Middle position</string>
    <string name="notification_slider_bottom_position">Bottom position</string>
    <string name="notification_slider_mode_total_silence">Total silence</string>
    <string name="notification_slider_mode_alarms_only">Alarms only</string>
    <string name="notification_slider_mode_priority_only">Priority only</string>
    <string name="notification_slider_mode_silent">Silent</string>
    <string name="notification_slider_mode_vibrate">Vibrate</string>
    <string name="notification_slider_mode_none">Normal</string>
    <string name="buttons_dashboard_summary">Alert Slider Settings</string>

    <!-- Vibration control -->
    <string name="category_vibrator">Vibration motor</string>
    <string name="vib_strength_title_head">System Strength</string>
    <string name="vib_strength_summary_head">Define the strength of the vibration motor during general system input</string>
    <string name="vib_call_strength_title_head">Call Strength</string>
    <string name="vib_call_strength_summary_head">Define the strength of the vibration motor during an incoming call</string>
    <string name="vib_notif_strength_title_head">Notification Strength</string>
    <string name="vib_notif_strength_summary_head">Define the strength of the vibration motor during an incoming notification</string>

    <!-- Log Tile -->
    <string name="quick_settings_log_tile_label">LogTile</string>
    <string name="quick_settings_log_tile_dialog_title">Options</string>
    <string name="cannot_get_su">Action failed because of missing superuser access</string>

    <!-- FPS info -->
    <string name="misc_title">Miscellaneous</string>
    <string name="fps_info_title">FPS overlay</string>
    <string name="fps_info_summary">Show overlay with with current frames per second</string>

    <!-- Thermal profiles -->
    <string name="thermal_title">Performance</string>
    <string name="thermal_profiles_title">Thermal profiles</string>
    <string name="thermal_summary">Adjust per-app thermal profiles for optimum performance</string>
    <string name="thermal_default">Default</string>
    <string name="thermal_benchmark">Benchmark</string>
    <string name="thermal_browser">Browser</string>
    <string name="thermal_camera">Camera</string>
    <string name="thermal_dialer">Dialer</string>
    <string name="thermal_gaming">Gaming</string>
    <string name="thermal_streaming">Streaming</string>

    <!-- Clear Speaker -->
    <string name="clear_speaker_title">Clear speaker</string>
    <string name="clear_speaker_summary">Play a 30-second audio to clear the speaker</string>
    <string name="clear_speaker_description">Run this feature once or twice if you find that your speaker is lightly blocked by dust. Set media volume to maximum.\n\nIf the speaker is blocked heavily, run this feature 2-5 times while shaking your device with the speaker facing downwards.</string>

    <!-- Volume Gain -->
    <string name="microphone_gain">Microphone gain</string>
    <string name="earpiece_gain">Earpiece gain (Calls)</string>
    <string name="speaker_gain">Speaker gain</string>
    <string name="audio_amplification">Audio Amplification</string>

    <!-- Audio amplification -->
    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">Default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong press to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>

    <!-- Selinux Switch -->
    <string name="selinux_explanation_summary">SELinux is a set of kernel modifications and user-space tools. Changing modes can cause unwanted effects. Use at your own risk (will be grayed out if su not found!).</string>
    <string name="selinux_category">SELinux</string>
    <string name="selinux_mode_title">SELinux mode</string>
    <string name="selinux_permissive_summary">Permissive</string>
    <string name="selinux_enforcing_summary">Enforcing</string>
    <string name="selinux_persistence_title">Persist across reboots</string>
    <string name="selinux_persistence_summary">Restore the above set sepolicy mode on each boot</string>
    <string name="selinux_permissive_toast_title">Selinux set to permissive!</string>
    <string name="selinux_enforcing_toast_title">Selinux set to enforcing!</string>
</resources>
